--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                 currently only <a href="https://webvr.rocks/firefox" target="_blank">Firefox Nightly</a> is supported by this app.
                 <br/><br/>
                 When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "Enter VR".  Clicking this will
-                put the app in an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
+                put the app into an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
                 This is especially interesting if you set the <b>Mesh Material</b> to <b>Strain Visualization</b> so you can see how your interactions
                 change the internal strains in the material.
                 <br/><br/>
