--- a/index.html
+++ b/index.html
@@ -674,19 +674,19 @@
         <a href="#" class="seeMore closed" data-id="simulationSettings"><span class="fui-triangle-down"></span><b>Simulation Settings:</b></a><a class="about" href="#" id="aboutStiffness"><span class="fui-question-circle"></span></a><br/>
         <div id="simulationSettings" class="hide">
             <div class="sliderInput paddingBottom" id="axialStiffness">
-                <span class="label-slider">Axial Strength : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <span class="label-slider">Axial Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="form-control" type="text">
             </div>
             <!--<div class="sliderInput paddingBottom" id="triStiffness">-->
-                <!--<span class="label-slider">Triangle Strength : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>-->
+                <!--<span class="label-slider">Triangle Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>-->
                 <!--<input value="" placeholder="" class="form-control" type="text">-->
             <!--</div>-->
             <div class="sliderInput" id="creaseStiffness">
-                <span class="label-slider">Fold Strength : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <span class="label-slider">Fold Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="form-control" type="text">
             </div>
             <div class="sliderInput" id="panelStiffness">
-                <span class="label-slider">Facet Strength : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <span class="label-slider">Facet Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="form-control" type="text">
             </div>
             <div class="sliderInput" id="percentDamping">
@@ -1103,8 +1103,8 @@
                     As facet stiffness becomes very high, this simulation approaches a <a href="http://www.tsg.ne.jp/TT/cg/TachiFreeformOrigami2010.pdf" target="_blank">
                         rigid origami simulation</a>, and models the behavior of a rigid material (such as metal) when folded.<br/>
                     <br/>
-                    Constraints <i>strengths</i> (units of N) are scaled by the length of a particular constraint to determine the <i>stiffness</i>.  Axial stiffness is calculated by dividing
-                    axial strength by length; angular stiffness is calculated by multiplying fold or facet strength by length.<br/>
+                    Internally, constraints stiffnesses are scaled by the length of a particular constraint to determine its <i>geometric stiffness</i>.  For Axial constaints, stiffness is
+                    divided by length and for angular constraints, stiffness is multiplied by length.<br/>
                     <br/>
                     Since this is a dynamic simulation, vertices of the origami move with some notion of acceleration and velocity.  In order to
                     keep the system stable and help it converge to a static solution, <a target="_blank" href="https://en.wikipedia.org/wiki/Harmonic_oscillator#Damped_harmonic_oscillator">
