new crease patterns

--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
                         <a tabindex="-1">Origami<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                             <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
                             <li><a href="#" class="demo" data-url="Origami/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                         </ul>
@@ -576,11 +577,16 @@
                         <a tabindex="-1">Tesselations<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
-                            <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb (six-crease base)</a></li>
-                            <li><a href="#" class="demo" data-url="Tessellations/waterbombTwist.svg">Waterbomb (eight-crease base)</a></li>
-                            <li><a href="#" class="demo" data-url="Tessellations/reschtritessellation.svg">Resch Triangle Tessellation</a></li>
-                            <li><a href="#" class="demo" data-url="Tessellations/reschbarbell.svg">Resch Barbell Tessellation</a></li>
-                            <li><a href="#" class="demo" data-url="Tessellations/honeycomb_333_cp.svg">Lang Honeycomb Tessellation</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/huffmanExtrudedBoxes.svg">Huffman Extruded Boxes</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/huffmanWaterbomb.svg">Huffman Waterbombs</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/huffmanRectangularWeave.svg">Huffman Rect Weave</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/huffmanStarsTriangles.svg">Huffman Stars-Triangles</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/reschTriTessellation.svg">Resch Triangle Tessellation</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/langHoneycomb.svg">Lang Honeycomb Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/oval_tessellation_cp.svg">Lang Oval Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/hyperbolic_limit_cp.svg">Lang Hyperbolic Limit</a></li>
                         </ul>
@@ -595,7 +601,6 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Problematic Patterns<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/wedged_double_faced.svg">Lang Wedged Double Faced Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/rattanweaveLang.svg">Lang Rattan Weave</a></li>
                         </ul>
