more crease patterns

--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
                             <li><a href="#" class="demo" data-url="Tessellations/huffmanWaterbomb.svg">Huffman Waterbombs</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/huffmanRectangularWeave.svg">Huffman Rect Weave</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/huffmanStarsTriangles.svg">Huffman Stars-Triangles</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/huffmanExdentedBoxes.svg">Huffman Exdented Boxes</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo" data-url="Tessellations/reschTriTessellation.svg">Resch Triangle Tessellation</a></li>
                             <li class="divider"></li>
@@ -595,6 +596,12 @@
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Simple Folds<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="SimpleFolds/simpleVertex.svg">Simple Vertex</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
