--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
                             <li><a href="#" class="demo" data-url="Tessellations/huffmanExdentedBoxes.svg">Huffman Exdented Boxes</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo" data-url="Tessellations/reschTriTessellation.svg">Resch Triangle Tessellation</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/reschBarbell.svg">Resch Barbell Tessellation</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo" data-url="Tessellations/langHoneycomb.svg">Lang Honeycomb Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/oval_tessellation_cp.svg">Lang Oval Tessellation</a></li>
