simple fold examples

--- a/index.html
+++ b/index.html
@@ -603,6 +603,9 @@
                         <a tabindex="-1">Simple Folds<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="SimpleFolds/simpleVertex.svg">Simple Vertex</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/russianTuck.svg">Russian Tuck</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/mapFold.svg">Map Fold</a></li>
+                            <li><a href="#" class="demo" data-url="SimpleFolds/brochureFold.svg">Brochure Fold</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
